--- a/app/page/contact/contact.module.css
+++ b/app/page/contact/contact.module.css
@@ -8,12 +8,37 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-}
 
-#address > :first-child {
-    margin-right: 0.5rem;
+    border-radius: 16px
 }
 
 #address > span {
+    margin-right: 0.5rem;
     font-weight: 700;
+    color: #314E6B;
+    font-size: calc(var(--font-coefficient) * 0.5);
+    
+    background-color: rgba(108, 171, 235, 0.07);
+    padding: 1rem;
+    border-radius: 16px
+}
+
+@media (max-width: 490px) {
+    #address > span {
+        --font-coefficient: 1.7rem;
+    }
+
+    #address {
+        flex-direction: column;
+    }
+    #address > span {
+        margin-right: 0;
+        margin-bottom: 0.5rem;
+    }
+}
+
+@media (max-width: 380px) {
+    #address > span {
+        --font-coefficient: 1.6rem;
+    }
 }
