--- a/app/page/layout.module.css
+++ b/app/page/layout.module.css
@@ -16,17 +16,14 @@
 
 #content {
     background-color: rgb(244, 249, 254);
-    /* background-color: #00000002; */
-    /* box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1); */
-    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-    padding: 1rem;
+    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+    /* box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1); */
+    padding: 2rem;
     border: 2px solid #314E6B;
     border-radius: 16px;
     
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
-    position: relative;
 }
 #content h2, #content h3 {
     color: #5486B8;
@@ -65,7 +62,5 @@
 @media (min-width: 768px) {
     #page {
         --font-coefficient: 2.5rem;
-    }
-    #content {
     }
 }
